# xclif

./: ARCHITECTURE.md  CONTRIBUTING.md  MANIFESTO.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_frameworks.py  bench_parsing.py
benchmarks/examples/: click_greeter.py  typer_greeter.py  xclif_greeter_flat.py
benchmarks/examples/xclif_greeter/: __main__.py
benchmarks/examples/xclif_greeter/routes/: __init__.py  greet.py
benchmarks/examples/xclif_greeter/routes/config/: __init__.py  get.py  set.py
docs/: commands.rst  option-system-design.md  quickstart.rst  routing.rst
experiments/greeter/: README.md
experiments/greeter/greeter/: __main__.py
experiments/greeter/greeter/routes/: __init__.py  greet.py
experiments/greeter/greeter/routes/config/: __init__.py  read.py
experiments/poetry-clone/: README.md
experiments/poetry-clone/poetry/: __main__.py
experiments/poetry-clone/poetry/routes/: __init__.py
experiments/poetry-clone/poetry/routes/self/: __init__.py
src/xclif/: __init__.py  annotations.py  command.py  completions.py  constants.py  definition.py  errors.py  importer.py  parser.py
tests/: test_cli.py  test_command.py  test_integration_greeter.py  test_parser.py
