[project]
name = "xclif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ThatXliner", email = "bryan.hu.2020@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
